--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,37 @@
 <resources>
     <string name="app_name">Dibs</string>
     <string name="title_activity_maps">Map</string>
+    <string name="action_addEvent">Mark Event</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="nav_home">My Profile</string>
+    <string name="nav_resources">Extra Resources</string>
+    <string name="nav_about_us">About Us</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="nav_settings">Settings</string>
+    <string name="nav_notifications">Notifications</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="openDrawer">open_drawer</string>
+    <string name="closeDrawer">close_drawer</string>
+
+    <!-- Navigation Drawer menu labels -->
+    <string name="nav_photos">Photos</string>
+    <string name="nav_movies">Movies</string>
+
+    <string-array name="nav_item_activity_titles">
+        <item>My Profile</item>
+        <item>Link</item>
+        <item>About Us</item>
+        <item>Logout</item>
+    </string-array>
+    />
+
+
+    <string name="activity_title_about_us">About Us</string>
+    <string name="activity_title_privacy_policy">Privacy Policy</string>
+    <string name="action_clear_all">Clear All</string>
+    <string name="action_logout">Logout</string>
+    <string name="action_mark_all_read">Mark All as Read</string>
 </resources>
